--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -28,7 +28,7 @@ include_directories(${CMAKE_SOURCE_DIR}/libraries/octomap-1.8.0/octomap/include)
 set(Octomap_LIBS octomap octomath)
 
 ## Add other sub source directories
-#add_subdirectory(examples)
+add_subdirectory(examples)
 add_subdirectory(libraries)
 add_subdirectory(common)
 add_subdirectory(simulator)
