--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -42,13 +42,13 @@ target_link_libraries(lcm_subscriber_cpp ${LCM_LIBRARIES})
 add_executable(lcm_publisher_cpp lcm_publisher.cpp)
 target_link_libraries(lcm_publisher_cpp ${LCM_LIBRARIES})
 
-add_executable(uavcan_publisher uavcan_publisher.cpp)
-add_definitions(-DUAVCAN_CPP_VERSION=UAVCAN_CPP11)
-target_link_libraries(uavcan_publisher uavcan)
+#add_executable(uavcan_publisher uavcan_publisher.cpp)
+#add_definitions(-DUAVCAN_CPP_VERSION=UAVCAN_CPP11)
+#target_link_libraries(uavcan_publisher uavcan)
 
-add_executable(uavcan_subscriber uavcan_subscriber.cpp)
-add_definitions(-DUAVCAN_CPP_VERSION=UAVCAN_CPP11)
-target_link_libraries(uavcan_subscriber uavcan)
+#add_executable(uavcan_subscriber uavcan_subscriber.cpp)
+#add_definitions(-DUAVCAN_CPP_VERSION=UAVCAN_CPP11)
+#target_link_libraries(uavcan_subscriber uavcan)
 
 add_executable(logger_example logger_example.cpp)
 target_link_libraries(logger_example utility)
