--- a/src/planning/map/CMakeLists.txt
+++ b/src/planning/map/CMakeLists.txt
@@ -20,25 +20,25 @@ target_link_libraries(map geometry ${Octomap_LIBS} ${LCM_LIBRARIES} ${OpenCV_LIB
 
 # Add executables
 add_executable(test_qtree tests/test_quadtree.cpp)
-target_link_libraries(test_qtree geometry vis map ${OpenCV_LIBS})
+target_link_libraries(test_qtree geometry vis map)
 
 add_executable(test_sgrid tests/test_squaregrid.cpp)
-target_link_libraries(test_sgrid geometry vis map ${OpenCV_LIBS})
+target_link_libraries(test_sgrid geometry vis map)
 
 add_executable(test_sgridv2 tests/test_squaregridv2.cpp)
-target_link_libraries(test_sgridv2 geometry vis map ${OpenCV_LIBS})
+target_link_libraries(test_sgridv2 geometry vis map)
 
 add_executable(test_graphvis tests/test_graphvis.cpp)
-target_link_libraries(test_graphvis geometry vis map ${OpenCV_LIBS})
+target_link_libraries(test_graphvis geometry vis map)
 
 add_executable(test_image tests/test_image.cpp)
-target_link_libraries(test_image map vis ${OpenCV_LIBS})
+target_link_libraries(test_image map vis)
 
 add_executable(test_expansion tests/test_expansion.cpp)
-target_link_libraries(test_expansion map vis ${OpenCV_LIBS})
+target_link_libraries(test_expansion map vis)
 
 add_executable(test_traj tests/test_traj.cpp)
-target_link_libraries(test_traj map vis ${OpenCV_LIBS})
+target_link_libraries(test_traj map vis)
 
 add_executable(octree_example tests/octomap_example.cpp)
 target_link_libraries(octree_example ${Octomap_LIBS})
@@ -47,4 +47,4 @@ target_link_libraries(octree_example ${Octomap_LIBS})
 #target_link_libraries(test_octomap ${Octomap_LIBS})
 
 #add_executable(test_cubebuilder tests/test_cubebuilder.cpp)
-#target_link_libraries(test_cubebuilder map geometry ${Octomap_LIBS} ${LCM_LIBRARIES})
+#target_link_libraries(test_cubebuilder map geometry ${LCM_LIBRARIES})
