--- a/src/quadrotor/path_repair/CMakeLists.txt
+++ b/src/quadrotor/path_repair/CMakeLists.txt
@@ -4,7 +4,7 @@ include_directories(${CMAKE_SOURCE_DIR}/src)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 # Dependency libraries
-find_package(OpenCV REQUIRED)
+#find_package(LIBRARY_NAME REQUIRED)
 
 # Add libraries
 set(PATH_REPAIR_COMMON_SRC
@@ -18,7 +18,7 @@ if (GUROBI_FOUND)
         geo_mark_graph.cpp    
     )
     add_library(path_repair STATIC ${PATH_REPAIR_LIB_SRC} ${PATH_REPAIR_COMMON_SRC})
-    target_link_libraries(path_repair map quad_base polyopt common vis ${OpenCV_LIBS} ${LCM_LIBRARIES})
+    target_link_libraries(path_repair map quad_base polyopt common vis ${LCM_LIBRARIES})
 endif()
 
 set(PATH_REPAIR_SIM_SRC
@@ -27,7 +27,7 @@ set(PATH_REPAIR_SIM_SRC
     sim/sim_depth_sensor.cpp
 )
 add_library(pr_sim STATIC ${PATH_REPAIR_SIM_SRC} ${PATH_REPAIR_COMMON_SRC})
-target_link_libraries(pr_sim utility ${LCM_LIBRARIES} ${OpenCV_LIBS})
+target_link_libraries(pr_sim utility map ${LCM_LIBRARIES})
 
 # Add executables
 
