--- a/src/control/quad_ctrl/CMakeLists.txt
+++ b/src/control/quad_ctrl/CMakeLists.txt
@@ -2,7 +2,7 @@
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 # Dependency libraries
-#find_package(OpenCV REQUIRED)
+#find_package(LIBRARY_NAME REQUIRED)
 
 # Add libraries
 set(QUADCON_LIB_SRC
