--- a/src/gtests/CMakeLists.txt
+++ b/src/gtests/CMakeLists.txt
@@ -5,7 +5,7 @@ include_directories(${CMAKE_SOURCE_DIR}/src)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 # Dependency libraries
-#find_package(OpenCV REQUIRED)
+#find_package(LIBRARY_NAME REQUIRED)
 
 # Add libraries
 #set(TESTCASES_SRC
