updated sim file headers

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -34,7 +34,7 @@ set(Octomap_LIBS octomap octomath)
 add_subdirectory(examples)
 add_subdirectory(libraries)
 add_subdirectory(common)
-#add_subdirectory(simulator)
+add_subdirectory(simulator)
 add_subdirectory(control)
 add_subdirectory(planning)
 add_subdirectory(quadrotor)
