saved work on field

--- a/src/planning/CMakeLists.txt
+++ b/src/planning/CMakeLists.txt
@@ -49,5 +49,6 @@ endif()
 
 ## Add other sub source directories
 add_subdirectory(geometry)
+add_subdirectory(field)
 add_subdirectory(map)
 add_subdirectory(examples)
