--- a/src/rc_car/tests/CMakeLists.txt
+++ b/src/rc_car/tests/CMakeLists.txt
@@ -8,3 +8,6 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 # Add executables
 add_executable(test_imu_calib test_imu_calib.cpp)
 target_link_libraries(test_imu_calib sensor utility)
+
+add_executable(test_inc_path test_create_field.cpp)
+target_link_libraries(test_inc_path field)
