--- a/src/simulator/vrep_sim/CMakeLists.txt
+++ b/src/simulator/vrep_sim/CMakeLists.txt
@@ -12,6 +12,7 @@ set(VREPSIM_LIB_SRC
 
 add_library(vrep_sim STATIC ${VREPSIM_LIB_SRC})
 add_definitions(-DNON_MATLAB_PARSING -DMAX_EXT_API_CONNECTIONS=255)
+#target_compile_definitions(vrep_sim PUBLIC NON_MATLAB_PARSING MAX_EXT_API_CONNECTIONS=1)
 
 if (UNIX)
  	target_link_libraries(vrep_sim pthread)
