--- a/src/planning/graph/CMakeLists.txt
+++ b/src/planning/graph/CMakeLists.txt
@@ -1,19 +1,19 @@
 # Include path
-#include_directories(${CMAKE_SOURCE_DIR}/inc)
-include_directories(${CMAKE_SOURCE_DIR}/src)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 # Dependency libraries
 #find_package(LIBRARY_NAME REQUIRED)
 
 # Add libraries
-#set(GRAPH_LIB_SRC
-	#graph.cpp
-	#graph_builder.cpp
-#)
-#add_library(graph STATIC ${GRAPH_LIB_SRC})
-#target_link_libraries(graph qtree)
-
-# Add executables
-#add_executable(test_template test_template.cpp)
-#target_link_libraries(test_template graph)
+set(GRAPH_LIB_SRC
+	graph.h
+	vertex.h
+	edge.h
+	bds_base.h
+	bds_example.h
+)
+add_library(graph INTERFACE)
+target_sources(graph INTERFACE ${GRAPH_LIB_SRC})
+target_include_directories(graph PUBLIC
+	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+	$<INSTALL_INTERFACE:include>)
