--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -31,16 +31,16 @@ include_directories(${CMAKE_SOURCE_DIR}/libraries/octomap-1.8.0/octomap/include)
 set(Octomap_LIBS octomap octomath)
 
 ## Add other sub source directories
-add_subdirectory(platforms/quadrotor)
-add_subdirectory(platforms/rc_car)
 add_subdirectory(examples)
 add_subdirectory(libraries)
 add_subdirectory(common)
-add_subdirectory(simulator)
 add_subdirectory(control)
 add_subdirectory(planning)
 add_subdirectory(utility)
 add_subdirectory(vis)
+add_subdirectory(platforms/quadrotor)
+add_subdirectory(platforms/rc_car)
+add_subdirectory(platforms/simulator)
 
 ## Add test source directories
 if(BUILD_TESTS)
