saved work on field vis

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -38,6 +38,7 @@ add_subdirectory(control)
 add_subdirectory(planning)
 add_subdirectory(utility)
 add_subdirectory(vis)
+add_subdirectory(visualization)
 add_subdirectory(platforms/quadrotor)
 add_subdirectory(platforms/rc_car)
 add_subdirectory(platforms/simulator)
