--- a/src/planning/field/tests/CMakeLists.txt
+++ b/src/planning/field/tests/CMakeLists.txt
@@ -9,5 +9,8 @@ include_directories(${CMAKE_SOURCE_DIR}/src)
 add_executable(test_create_field test_create_field.cpp)
 target_link_libraries(test_create_field field)
 
-add_executable(test_field test_field.cpp)
-target_link_libraries(test_field field ${LCM_LIBRARIES}) 
+add_executable(test_road_field test_road_field.cpp)
+target_link_libraries(test_road_field field ${LCM_LIBRARIES}) 
+
+add_executable(test_vehicle_field test_vehicle_field.cpp)
+target_link_libraries(test_vehicle_field field ${LCM_LIBRARIES}) 
