--- a/src/planning/CMakeLists.txt
+++ b/src/planning/CMakeLists.txt
@@ -48,6 +48,7 @@ else()
 endif()
 
 ## Add other sub source directories
+add_subdirectory(map)
 add_subdirectory(geometry)
 add_subdirectory(field)
-add_subdirectory(map)
+add_subdirectory(traffic)
