--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -34,13 +34,14 @@ set(Octomap_LIBS octomap octomath)
 add_subdirectory(examples)
 add_subdirectory(libraries)
 add_subdirectory(common)
-add_subdirectory(simulator)
 add_subdirectory(control)
 add_subdirectory(planning)
-add_subdirectory(quadrotor)
-add_subdirectory(rc_car)
 add_subdirectory(utility)
 add_subdirectory(vis)
+add_subdirectory(visualization)
+add_subdirectory(platforms/quadrotor)
+add_subdirectory(platforms/rc_car)
+add_subdirectory(platforms/simulator)
 
 ## Add test source directories
 if(BUILD_TESTS)
