more cleanup on polyopt module

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,6 +52,7 @@
         "__config": "cpp",
         "geometry": "cpp",
         "*.ipp": "cpp",
-        "core": "cpp"
+        "core": "cpp",
+        "vector": "cpp"
     }
 }
