--- a/src/planning/polyopt/tests/CMakeLists.txt
+++ b/src/planning/polyopt/tests/CMakeLists.txt
@@ -17,8 +17,8 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 #add_executable(test_qp3 tests/test_qp3.cpp)
 #target_link_libraries(test_qp3 polyopt ${GUROBI_LIBRARIES})
 
-#add_executable(test_opt tests/test_opt.cpp)
-#target_link_libraries(test_opt polyopt ${GUROBI_LIBRARIES})
+add_executable(test_opt test_opt.cpp)
+target_link_libraries(test_opt polyopt)
 
 #add_executable(test_corridor tests/test_corridor.cpp)
 #target_link_libraries(test_corridor polyopt ${GUROBI_LIBRARIES} ${LCM_LIBRARIES})
