--- a/src/fastplot/tests/CMakeLists.txt
+++ b/src/fastplot/tests/CMakeLists.txt
@@ -6,14 +6,17 @@ include_directories(${CMAKE_SOURCE_DIR}/src)
 #find_package(LIBRARY_NAME REQUIRED)
 
 ## tests
-add_executable(test_vtk test_vtk.cpp )
-target_link_libraries(test_vtk ${VTK_LIBRARIES})
+add_executable(test_imgplot test_imgplot.cpp )
+target_link_libraries(test_imgplot fastplot)
 
-add_executable(test_vtk2 test_vtk2.cpp )
-target_link_libraries(test_vtk2 ${VTK_LIBRARIES})
+# add_executable(test_vtk test_vtk.cpp )
+# target_link_libraries(test_vtk ${VTK_LIBRARIES})
 
-add_executable(test_surface test_surface.cpp )
-target_link_libraries(test_surface ${VTK_LIBRARIES})
+# add_executable(test_vtk2 test_vtk2.cpp )
+# target_link_libraries(test_vtk2 ${VTK_LIBRARIES})
+
+# add_executable(test_surface test_surface.cpp )
+# target_link_libraries(test_surface ${VTK_LIBRARIES})
 
 # add_executable(test_mathgl test_mathgl.cpp )
 # target_link_libraries(test_mathgl ${MATHGL2_LIBRARIES})
