--- a/src/platforms/quadrotor/expts/CMakeLists.txt
+++ b/src/platforms/quadrotor/expts/CMakeLists.txt
@@ -53,3 +53,6 @@ target_link_libraries(expt_pysim_12 map pr_sim quad_base common ${LCM_LIBRARIES}
 
 add_executable(expt_pysim_13 pr_pysim_13.cpp)
 target_link_libraries(expt_pysim_13 map pr_sim quad_base common ${LCM_LIBRARIES})
+
+add_executable(expt_pysim_14 pr_pysim_14.cpp)
+target_link_libraries(expt_pysim_14 map pr_sim quad_base common ${LCM_LIBRARIES})
