--- a/src/vis/CMakeLists.txt
+++ b/src/vis/CMakeLists.txt
@@ -33,7 +33,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_SOURCE_DIR}/src)
 
 # Dependency libraries
-find_package(OpenCV REQUIRED)
+find_package(OpenCV 2.4 REQUIRED)
 
 # Add libraries
 set(VIS_LIB_SRC
