minor fix to octomap lib: isnan() -> ::is_nan()

--- a/src/platforms/simulator/apps/CMakeLists.txt
+++ b/src/platforms/simulator/apps/CMakeLists.txt
@@ -11,11 +11,11 @@ target_link_libraries(quadsim_hbird_demo quadsim)
 #add_executable(rc_car_sim_control rc_car_sim_control.cpp)
 #target_link_libraries(rc_car_sim_control rccarsim car_ctrl)
 
-add_executable(quadsim_path_repair quadsim_path_repair.cpp)
-target_link_libraries(quadsim_path_repair quadsim path_repair)
+# add_executable(quadsim_path_repair quadsim_path_repair.cpp)
+# target_link_libraries(quadsim_path_repair quadsim path_repair)
 
-add_executable(quadsim_path_repair_test quadsim_path_repair_test.cpp)
-target_link_libraries(quadsim_path_repair_test quadsim path_repair)
+# add_executable(quadsim_path_repair_test quadsim_path_repair_test.cpp)
+# target_link_libraries(quadsim_path_repair_test quadsim path_repair)
 
 add_executable(quadsim_hbird_pos_step quadsim_hbird_pos_step.cpp)
 target_link_libraries(quadsim_hbird_pos_step quadsim)
