--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -31,18 +31,19 @@ include_directories(${CMAKE_SOURCE_DIR}/libraries/octomap-1.8.0/octomap/include)
 set(Octomap_LIBS octomap octomath)
 
 ## Add other sub source directories
-add_subdirectory(examples)
-add_subdirectory(vtalk)
-add_subdirectory(libraries)
+# add_subdirectory(examples)
+# add_subdirectory(vtalk)
+# add_subdirectory(libraries)
 add_subdirectory(common)
-add_subdirectory(control)
-add_subdirectory(planning)
-add_subdirectory(utility)
-add_subdirectory(vis)
+# add_subdirectory(control)
+# add_subdirectory(planning)
+add_subdirectory(planning_v2)
+# add_subdirectory(utility)
+# add_subdirectory(vis)
 add_subdirectory(fastplot)
-add_subdirectory(platforms/quadrotor)
-add_subdirectory(platforms/rc_car)
-add_subdirectory(platforms/simulator)
+# add_subdirectory(platforms/quadrotor)
+# add_subdirectory(platforms/rc_car)
+# add_subdirectory(platforms/simulator)
 
 ## Add test source directories
 if(BUILD_TESTS)
