--- a/src/planning_v2/CMakeLists.txt
+++ b/src/planning_v2/CMakeLists.txt
@@ -41,4 +41,5 @@ include_directories(${LCM_GENERATED_HEADER_PATH})
 add_subdirectory(libgraph)
 add_subdirectory(demo)
 add_subdirectory(geometry)
-# add_subdirectory(map)
+add_subdirectory(planner)
+add_subdirectory(map)
