--- a/src/planning_v2/map/CMakeLists.txt
+++ b/src/planning_v2/map/CMakeLists.txt
@@ -10,10 +10,12 @@ find_package(OpenCV 2.4 REQUIRED)
 set(MAP_LIB_SRC
   # 2D map
   src/image_utils.cpp
-  src/map_utils.cpp
+  # src/map_utils.cpp
+  src/map2d.cpp
+  # src/sgrid_builder.cpp
 )
 add_library(map STATIC ${MAP_LIB_SRC})
-target_link_libraries(map geometry common ${Octomap_LIBS} ${LCM_LIBRARIES} ${OpenCV_LIBS})
+target_link_libraries(map geometry common ${LCM_LIBRARIES} ${OpenCV_LIBS})
 target_include_directories(map PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/inc>
   $<INSTALL_INTERFACE:include>
